This file contains a list of plume-lib releases.
However, the recommended way to use the latest version of plume-lib is
by cloning its repository; run:
  git clone https://github.com/mernst/plume-lib.git

===========================================================================

plume-lib 1.1.1, released ??

The plume-lib homepage has moved to https://mernst.github.io/plume-lib/

===========================================================================

plume-lib 1.1.0, released August 17, 2016

Programs run-google-java-format.py and check-google-java-format.py are
wrappers for the google-java-format program.  That program creates poor
formatting for annotations, particularly for type annotations and for
annotations in comments.  The run-google-java-format.py wrapper runs
google-java-format and then improves formatting of annotations.  The
check-google-java-format.py wrapper reports any files that would be
reformatted by run-google-java-format.py program, and returns non-zero
status if there were any.

Deprecated the search program in favor of ag.  ag is faster.  A limitation
of ag is that, contrary to its documentation, it does not search within
archives such as .zip and .tar files.

plume.jar no longer contains the contents of junit.jar.  JUnit is needed to
run plume-lib's tests, but is not needed at run time.  This reduces the
size of plume.jar and avoids conflicts with clients' assumptions about JUnit.

Consolidated documentation into the docs/ subdirectory.  Previously, some
was in the gh-pages branch and some was in the root directory.

===========================================================================

plume-lib 1.0.9, released February 10, 2016

Removed deprecated classes and methods:
  Assert
  BCELUtil.type_to_classname(Type)
  BCELUtil.type_to_classgetname(Type)
  EntryReader.get_filename()
  EntryReader.get_line_number()
  Fmt
  MultiReader
  Options.ignore_options_after_arg(boolean)
  Options.parse_and_usage(String[])