@@ -620,7 +620,9 @@ This contains no documentation, so don't include it in this README file.
 <dl>
 <dt>run-google-java-format.py</dt>
 <dd>
-  The
+  <p><b>Don't use this version.</b>  Use it from the <a href="https://github.com/plume-lib/run-google-java-format">run-google-java-format repository</a> instead.</p>
+
+  <p>The
   <a href="https://github.com/google/google-java-format">google-java-format</a>
   program reformats Java source code, but it creates poor formatting for
   annotations in comments.  This script runs google-java-format and then
@@ -628,10 +630,13 @@ This contains no documentation, so don't include it in this README file.
   If called with no arguments, it reads from and writes to standard output.
   <a href="https://raw.githubusercontent.com/mernst/plume-lib/master/bin/run-google-java-format.py">Documentation</a>
   at top of file.
+  </p>
 </dd>
 
 <dt>check-google-java-format.py</dt>
 <dd>
+  <p><b>Don't use this version.</b>  Use it from the <a href="https://github.com/plume-lib/run-google-java-format">run-google-java-format repository</a> instead.</p>
+
   Given <code>.java</code> file names on the command line, reports any that
   would be reformatted by the run-google-java-format.py program, and returns
   non-zero status if there were any.
